--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -46,5 +46,5 @@ jobs:
       # Step 7: Push Docker image
       - name: Push Docker image
         run: |
-          docker tag demo-cloud:${{ env.commit }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.commit }}
+          docker tag demo-cloud:${{ env.commit }} ghcr.io/ahakra/demo_cloud:${{ env.commit }}
           docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.commit }}
