--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Print Hello Message
       - run: echo "Hello! This is a demo GitHub Actions workflow. 🚀"
+        uses: actions/checkout@v3
       # Step 1: Checkout the repository
 #      - name: Checkout code
 #        uses: actions/checkout@v3
