--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,9 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print Hello Message
-      - run: echo "Hello! This is a demo GitHub Actions workflow. 🚀"
+      - name: Checkout the code
         uses: actions/checkout@v3
+
+      - name: Print Hello Message
+        run: echo "Hello! This is a demo GitHub Actions workflow. 🚀"
       # Step 1: Checkout the repository
 #      - name: Checkout code
 #        uses: actions/checkout@v3
