--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -18,9 +18,10 @@ jobs:
 
       # Set up Google Cloud authentication
       - name: Set up Google Cloud Authentication
-        uses: google-github-actions/auth@v0.4.0
+        uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
+
 
       # Set up kubectl to use GKE
       - name: Set up kubectl
