--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -17,14 +17,16 @@ jobs:
         uses: actions/checkout@v3
 
       # Set up Google Cloud authentication
-      - name: Set up Google Cloud Authentication
-        uses: 'google-github-actions/auth@v0.4.0'
+      - name: Authenticate to Google Cloud using Workload Identity Federation
+        uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+            - service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+            - workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
 
 
 
-      # Set up kubectl to use GKE
+
+        # Set up kubectl to use GKE
       - name: Set up kubectl
         run: |
           gcloud container clusters get-credentials YOUR_CLUSTER_NAME \
