--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Set up kubectl
         run: |
           gcloud container clusters get-credentials YOUR_CLUSTER_NAME \
-            --zone YOUR_CLUSTER_ZONE \
-            --project YOUR_PROJECT_ID
+            --zone e2-standard-2 \
+            --project ${{ secrets.GCP_PROJECT_ID }}
       # Optionally, you can verify kubectl is connected to your cluster
       - name: Verify kubectl config
         run: kubectl get nodes
