--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -28,11 +28,16 @@ jobs:
 
 
 
+      - name: Install Google Cloud SDK
+        run: |
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo tee /usr/share/keyrings/cloud.google.gpg
+          sudo apt-get update && sudo apt-get install google-cloud-sdk
 
       - name: Install gke-gcloud-auth-plugin
         run: |
-            gcloud components install gke-gcloud-auth-plugin
-        
+          sudo apt-get install google-cloud-cli-gke-gcloud-auth-plugin
+          
 
         # Set up kubectl to use GKE
       - name: Set up kubectl
