--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -27,29 +27,14 @@ jobs:
             workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
 
 
-
-      - name: Install Google Cloud SDK
-        run: |
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo tee /usr/share/keyrings/cloud.google.gpg
-          curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg
-          sudo apt-get update --allow-unauthenticated && sudo apt-get install google-cloud-sdk --allow-unauthenticated
-
-
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          sudo apt-get install google-cloud-cli-gke-gcloud-auth-plugin -allow-unauthenticated
           
 
         # Set up kubectl to use GKE
-      - name: Set up kubectl
-        run: |
-          gcloud container clusters get-credentials gke-cluster \
-            --zone me-central1-a \
-            --project ${{ secrets.GCP_PROJECT_ID }}
+#      - name: Set up kubectl
+#        run: |
+#          gcloud container clusters get-credentials gke-cluster \
+#            --zone me-central1-a \
+#            --project ${{ secrets.GCP_PROJECT_ID }}
       # Optionally, you can verify kubectl is connected to your cluster
       - name: Verify kubectl config
         run: kubectl get nodes
