--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -69,9 +69,9 @@ jobs:
             exit 1
           fi
           # Set the secret as an environment variable for subsequent steps
-          echo "TOPSECRET=$TOPSECRET" >> ${{TOP_SECRET_ENV_VAR}}
+          echo "TOPSECRET=$TOPSECRET" >> ${{env.TOP_SECRET_ENV_VAR}}
           
           # Use the Vault secret in a subsequent step
           - name: Use the Vault secret
             run: |
-              echo "The topsecret is ${{TOP_SECRET_ENV_VAR}}"
+              echo "The topsecret is ${{env.TOP_SECRET_ENV_VAR}}"
