--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -61,9 +61,9 @@ jobs:
             url: ${{ secrets.VAULT_ADDR }}
             token: ${{ secrets.VAULT_TOKEN }}
             secrets: |
-              secret/data/democloud/config topsecret | ${{env.TOP_SECRET_ENV_VAR}} 
+              secret/data/democloud/config topsecret | TOP_SECRET_ENV_VAR
             
 
       - name: Use the Vault secret
         run: |
-              echo "The topsecret is ${{env.TOP_SECRET_ENV_VAR}}"
+              echo "The topsecret is  $TOP_SECRET_ENV_VAR"
