--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -69,3 +69,11 @@ jobs:
               echo "The topsecret is  $TOP_SECRET_ENV_VAR"
       - name: Debug Environment Variables
         run: env | grep TOP_SECRET_ENV_VAR
+      - name: Replace placeholders
+        run: |
+            sed -i "s|\${IMAGE_TAG}|${{ github.sha }}|g" deployment.yaml
+            sed -i "s|\${TOP_SECRET}|$TOP_SECRET|g" deployment.yaml
+
+      - name: Apply Kubernetes manifest
+        run: |
+            kubectl apply -f manifest/deployment.yaml
