--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -71,8 +71,8 @@ jobs:
         run: env | grep TOP_SECRET_ENV_VAR
       - name: Replace placeholders
         run: |
-            sed -i "s|\${IMAGE_TAG}|${{ github.sha }}|g" deployment.yaml
-            sed -i "s|\${TOP_SECRET}|$TOP_SECRET|g" deployment.yaml
+            sed -i "s|\${IMAGE_TAG}|${{ github.sha }}|g" manifest/deployment.yaml
+            sed -i "s|\${TOP_SECRET}|$TOP_SECRET|g" /manifestdeployment.yaml
 
       - name: Apply Kubernetes manifest
         run: |
