--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -71,7 +71,7 @@ jobs:
         run: env | grep TOP_SECRET_ENV_VAR
       - name: Replace placeholders
         run: |
-            sed -i "s|\${IMAGE_TAG}|${{ env.commit }}|g" manifest/deployment.yaml
+            sed -i "s|\${IMAGE_TAG}|${{ github.sha }}|g" manifest/deployment.yaml
             sed -i "s|\${TOP_SECRET}|$TOP_SECRET|g" manifest/deployment.yaml
 
       - name: Apply Kubernetes manifest
