--- a/.github/workflows/kube-deploy.yml
+++ b/.github/workflows/kube-deploy.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Replace placeholders
         run: |
-            sed -i "s|\${IMAGE_TAG}|${{ env.commit }}|g" manifest/deployment.yaml
+            sed -i "s|\${IMAGE_TAG}|${{ github.sha }}|g" manifest/deployment.yaml
             sed -i "s|\${TOP_SECRET}|$TOP_SECRET|g" manifest/deployment.yaml
 
       - name: Apply Kubernetes manifest
