--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,7 +34,8 @@ jobs:
       # Step 4: Build the Go app
       - name: Build Go application
         run: |
-          go build -ldflags='-s -w -X main.Version=${{ github.sha }}' -o app cmd/api/*
+          go build -ldflags="-s -w -X main.Version=${GITHUB_SHA}" -o app cmd/api/*
+
 
       # Step 5: Build and tag Docker image
       - name: Build Docker image
