--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,10 +31,15 @@ jobs:
         id: get_commit
         run: echo "COMMIT_HASH=$(git rev-parse HEAD)" >> $GITHUB_ENV
 
+      - name: Print commit hash for debugging
+        run:
+            echo "Commit hash: $COMMIT_HASH"
+
+
       # Step 4: Build the Go app
       - name: Build Go application
         run: |
-          go build -ldflags="-s -w -X main.Version=${COMMIT_HASH}" -o app cmd/api/*
+          go build -ldflags "s -w -X main.Version=${COMMIT_HASH} -o app cmd/api/*
 
 
       # Step 5: Build and tag Docker image
