--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,7 +39,7 @@ jobs:
       # Step 4: Build the Go app
       - name: Build Go application
         run: |
-          go build -ldflags "s -w -X main.Version=${COMMIT_HASH}" -o app cmd/api/*
+          go build -ldflags "s -w -X main.Version=${{ env.COMMIT_HASH }}" -o app cmd/api/*
 
 
       # Step 5: Build and tag Docker image
