--- a/IAC/gke/deployment.yaml
+++ b/IAC/gke/deployment.yaml
@@ -6,9 +6,27 @@ resources:
       cluster:
         name: gke-cluster
         zone: me-central1-a
+        locations:
+          - me-central1-a
+          - me-central1-b
         nodeConfig:
           machineType: e2-standard-2
           diskSizeGb: 10
           oauthScopes:
             - "https://www.googleapis.com/auth/cloud-platform"
         initialNodeCount: 2
+  - name: gke-node-pool
+    type: container.v1.nodePool
+    properties:
+        clusterId: gke-cluster
+        zone: me-central1-a
+        nodePool:
+          name: additional-node-pool
+          config:
+            machineType: n2-standard-4
+            diskSizeGb: 20
+            oauthScopes:
+              - "https://www.googleapis.com/auth/cloud-platform"
+          initialNodeCount: 1
+          locations:
+            - me-central1-b
